updated index.html and added fontawesome

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
     <div class="d-flex">
     <h1>Hello World!</h1>
     <p>Hi there</p>
+    <i class="fa-brands fa-instagram"></i>
+    <i class="fa-brands fa-github"></i>
+    <i class="fa-brands fa-linkedin"></i>
+    <i class="fa-regular fa-envelope"></i>
     </div>
   </body>
 </html>
