updated index.html and porfolio.css

--- a/index.html
+++ b/index.html
@@ -37,13 +37,11 @@
     
   </head>
   <body>
-    <div class="d-flex">
-    <h1>Hello World! Bruh</h1>
-    <p>Hi there</p>
-    <i class="fa-brands fa-instagram"></i>
-    <i class="fa-brands fa-github"></i>
-    <i class="fa-brands fa-linkedin"></i>
-    <i class="fa-regular fa-envelope"></i>
+    <div class="hero">
+    <p>👋🏽 Hello, I am</p>
+    <h1>Angelica Victoria</h1>
+    <h2>Front-end developer based in the United States</h2>
+    <a href="#" class="btn-branding">Contact me</a>
     </div>
   </body>
 </html>
