updated index.html and portfolio.css

--- a/index.html
+++ b/index.html
@@ -40,8 +40,10 @@
     <div class="hero">
     <p>👋🏽 Hello, I am</p>
     <h1>Angelica Victoria</h1>
-    <h2>Front-end developer based in the United States</h2>
+    <h2 class="mb-3">Front-end developer based in the United States</h2>
+    <div>
     <a href="#" class="btn-branding">Contact me</a>
+    </div>
     </div>
   </body>
 </html>
