Integrated homepage content design

--- a/index.html
+++ b/index.html
@@ -45,5 +45,44 @@
     <a href="#" class="btn-branding">Contact me</a>
     </div>
     </div>
+    <p class="text-center m-5">Featured Projects</p>
+    <div class="container">
+      <div class="row mb-5">
+        <div class="col d-none d-lg-block">
+          <img src="images/yogurt.png" class="img-fluid" alt="" />
+        </div>
+        <div class="col">
+          <div class="project-description">
+    <h2 class="mb-5">Yogurt Project</h2>
+    <p class="mb-5 text-muted">Far far away, behind mountains, farm fram from blach blah blah.Far far away, behind mountains, farm fram from blach blah blah.Far far away, behind mountains, farm fram from blach blah blah</p>
+    <a href="" class="btn-branding-outline">Learn more</a>
+    </div>
+        </div>
+      </div>
+       <div class="row mb-5">
+        <div class="col">
+          <div class="project-description">
+    <h2 class="mb-5">Weather Project</h2>
+    <p class="mb-5 text-muted">Far far away, behind mountains, farm fram from blach blah blah.Far far away, behind mountains, farm fram from blach blah blah.Far far away, behind mountains, farm fram from blach blah blah</p>
+    <a href="" class="btn-branding-outline">Learn more</a>
+    </div>
+        </div>
+         <div class="col d-none d-lg-block">
+          <img src="images/weather.png" class="img-fluid" alt="" />
+        </div>
+      </div>
+       <div class="row mb-5">
+        <div class="col d-none d-lg-block">
+          <img src="images/dictionary.png" class="img-fluid" alt="" />
+        </div>
+        <div class="col">
+          <div class="project-description">
+    <h2 class="mb-5">Dictionary Project</h2>
+    <p class="mb-5 text-muted">Far far away, behind mountains, farm fram from blach blah blah.Far far away, behind mountains, farm fram from blach blah blah.Far far away, behind mountains, farm fram from blach blah blah</p>
+    <a href="" class="btn-branding-outline">Learn more</a>
+    </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
