--- a/index.html
+++ b/index.html
@@ -37,12 +37,36 @@
     
   </head>
   <body>
+<nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html">Angelica Victoria</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link " aria-current="page" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="about.html">About me</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about.html#contact">Contact me</a>
+            </li>
+            
+          </ul>
+        </div>
+      </div>
+    </nav>
+
     <div class="hero">
     <p>👋🏽 Hello, I am</p>
     <h1>Angelica Victoria</h1>
-    <h2 class="mb-3">Front-end developer based in the United States</h2>
+    <h2 class="mb-3">🇲🇽Front-end developer based in the United States</h2>
     <div>
-    <a href="#" class="btn-branding">Contact me</a>
+    <a href="about.html#contact" class="btn-branding">Contact me</a>
+    <a href="about.html" class="btn-branding">About Me</a>
     </div>
     </div>
     <p class="text-center m-5">Featured Projects</p>
