--- a/about.html
+++ b/about.html
@@ -58,16 +58,24 @@
         </div>
       </div>
     </nav>
-    <h1 class="text-center">About me</h1>
+    <div class="about-section container">
+      <div class="row">
+        <div class="col-6">
+    <h1 class="text-center">Hi, I am Angelica Victoria</h1>
     <h3 class="text-center">Front-end developer from Rancho Cucamonga, United States</h3>
-    <div class="about-paragraphs text-center">
       <p>
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
         aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui
         alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum
         blanditiis harum. 
       </p>
+      <a href="">See my projects</a>
+      </div>
+      <div class="col-6">
+      <img src="images/Angelica Victoria.png" alt="Angelica image" class="img-fluid rounded"/>
+      </div>
     </div>
+
     <div class="container mb-5">
       <div class="row">
         <div class="col-sm-4">
