--- a/about.html
+++ b/about.html
@@ -64,10 +64,7 @@
     <h1 class="text-center">Hi, I am Angelica Victoria</h1>
     <h3 class="text-center">Front-end developer from Rancho Cucamonga, United States</h3>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
-        aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui
-        alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum
-        blanditiis harum. 
+        I am a Front-end Developer with experience working with JavaScript, HTML, CSS, Bootstrap, AI, and Python to deliver exceptional customer experiences. Adept at contributing to a highly collaborative work environment, finding solutions, and determining customer satisfaction.
       </p>
       <a href="">See my projects</a>
       </div>
@@ -79,11 +76,11 @@
     <div class="container mb-5">
       <div class="row">
         <div class="col-sm-4">
-          <img src="images/yogurt.png" alt="Yogurt image" class="img-fluid p-2 shadow rounded"/></div>
+          <img src="images/World Clock project.png" alt="World Clock Project" class="img-fluid p-2 shadow rounded"/></div>
           <div class="col-sm-4">
-            <img src="images/weather.png" alt="Weather image" class="img-fluid p-2 shadow rounded"/></div>
+            <img src="images/Pablo Neruda project.png" alt="Pablo Neruda Project" class="img-fluid p-2 shadow rounded"/></div>
             <div class="col-sm-4">
-<img src="images/dictionary.png" alt="Dictionary image" class="img-fluid p-2 shadow rounded"/></div>       
+<img src="images/Sade project.png" alt="Sade Project" class="img-fluid p-2 shadow rounded"/></div>       
           </div>
         </div>    
         <div id="contact">
