updated about.html and styles

--- a/about.html
+++ b/about.html
@@ -60,28 +60,28 @@
     </nav>
     <div class="about-section container">
       <div class="row">
-        <div class="col-6">
+        <div class="col-lg-6">
           <div class="about-section-content">
-    <h1 class="mb-5">Hi, I am Angelica Victoria</h1>
-    <h2 class="mb-5">Front-end developer from Rancho Cucamonga, United States</h2>
+    <h1 class="mb-4">Hi, I am Angelica Victoria</h1>
+    <h2 class="mb-4">Front-end developer from Rancho Cucamonga, United States</h2>
       <p class="mb-4">
         I am a Front-end Developer with experience working with JavaScript, HTML, CSS, Bootstrap, AI, and Python to deliver exceptional customer experiences. Adept at contributing to a highly collaborative work environment, finding solutions, and determining customer satisfaction.
       </p>
       <a href="" class="btn-branding">See my projects</a>
       </div>
       </div>
-      <div class="col-6">
+      <div class="col-lg-6">
       <img src="images/Angelica Victoria.png" alt="Angelica image" class="img-fluid"/>
       </div>
     </div>
 
     <div class="container mb-5">
       <div class="row">
-        <div class="col-sm-4">
+        <div class="col-lg-4">
           <img src="images/World Clock project.png" alt="World Clock Project" class="img-fluid p-2 shadow rounded"/></div>
-          <div class="col-sm-4">
+          <div class="col-lg-4">
             <img src="images/Pablo Neruda project.png" alt="Pablo Neruda Project" class="img-fluid p-2 shadow rounded"/></div>
-            <div class="col-sm-4">
+            <div class="col-lg-4">
 <img src="images/Sade project.png" alt="Sade Project" class="img-fluid p-2 shadow rounded"/></div>       
           </div>
         </div>    
