updated images to about.html

--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
     <div class="container">
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
-          <img src="images/yogurt.png" class="img-fluid" alt="" />
+          <img src="images/World Clock project.png" class="img-fluid" alt="World Clock Project" />
         </div>
         <div class="col">
           <div class="project-description">
-    <h2 class="mb-5">Yogurt Project</h2>
+    <h2 class="mb-5">World Clock Project</h2>
     <p class="mb-5 text-muted">Far far away, behind mountains, farm fram from blach blah blah.Far far away, behind mountains, farm fram from blach blah blah.Far far away, behind mountains, farm fram from blach blah blah</p>
     <a href="" class="btn-branding-outline">Learn more</a>
     </div>
@@ -86,22 +86,22 @@
        <div class="row mb-5">
         <div class="col">
           <div class="project-description">
-    <h2 class="mb-5">Weather Project</h2>
+    <h2 class="mb-5">AI Poetry Generator</h2>
     <p class="mb-5 text-muted">Far far away, behind mountains, farm fram from blach blah blah.Far far away, behind mountains, farm fram from blach blah blah.Far far away, behind mountains, farm fram from blach blah blah</p>
     <a href="" class="btn-branding-outline">Learn more</a>
     </div>
         </div>
          <div class="col d-none d-lg-block">
-          <img src="images/weather.png" class="img-fluid" alt="" />
+          <img src="images/Pablo Neruda project.png" class="img-fluid" alt="Pablo Neruda Poetry Generator" />
         </div>
       </div>
        <div class="row mb-5">
         <div class="col d-none d-lg-block">
-          <img src="images/dictionary.png" class="img-fluid" alt="" />
+          <img src="images/Sade project.png" class="img-fluid" alt="Iconic Celebrity Project" />
         </div>
         <div class="col">
           <div class="project-description">
-    <h2 class="mb-5">Dictionary Project</h2>
+    <h2 class="mb-5">Iconic Celebrity Project</h2>
     <p class="mb-5 text-muted">Far far away, behind mountains, farm fram from blach blah blah.Far far away, behind mountains, farm fram from blach blah blah.Far far away, behind mountains, farm fram from blach blah blah</p>
     <a href="" class="btn-branding-outline">Learn more</a>
     </div>
