--- a/about.html
+++ b/about.html
@@ -58,10 +58,10 @@
         </div>
       </div>
     </nav>
-    <div class="about-section container">
+    <div class="content-container">
       <div class="row">
         <div class="col-lg-6">
-          <div class="about-section-content">
+          <div class="content">
     <h1 class="mb-4">Hi, I am Angelica Victoria</h1>
     <h2 class="mb-4">Front-end developer from Rancho Cucamonga, United States</h2>
       <p class="mb-4">
