--- a/index.html
+++ b/index.html
@@ -37,28 +37,24 @@
     
   </head>
   <body>
-<nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">Angelica Victoria</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link " aria-current="page" href="index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="about.html">About me</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="about.html#contact">Contact me</a>
-            </li>
-            
-          </ul>
-        </div>
-      </div>
-    </nav>
+  <div class="container">
+    <nav class="d-flex justify-content-between">
+  <img src="images/Original Logo.png" class="logo" alt="Wild Byte Logo">
+  <ul>
+    <li class="active">
+      <a href="/">Home</a>
+    </li>
+    <li>
+      <a href="/about.html">About</a>
+    </li>
+    <li>
+      <a href="/work.html">Work</a>
+      </li>
+    <li>
+      <a href="/contact.html">Contact</a></li>
+  </ul>
+  </div>
+</nav>
 
     <div class="hero">
     <p>👋🏽 Hello, I am</p>
