created a navbar and updated portfolio.css

--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
   <body>
   <div class="container">
     <nav class="d-flex justify-content-between">
-  <img src="images/Original Logo.png" class="logo" alt="Wild Byte Logo">
+  <img src="images/Original Logo.png" class="logo d-none d-md-block" alt="Wild Byte Logo">
+  <img src="images/Original Logo.png" class="logo-small img-fluid d-block d-md-none" alt="Wild Byte Logo Small">
   <ul>
     <li class="active">
       <a href="/">Home</a>
