added navbars to about.html, contact.html, and work.html

--- a/work.html
+++ b/work.html
@@ -36,6 +36,26 @@
     
   </head>
   <body>
+<div class="container">
+    <nav class="d-flex justify-content-between">
+  <img src="images/Original Logo.png" class="logo d-none d-md-block" alt="Wild Byte Logo">
+  <img src="images/Original Logo.png" class="logo-small img-fluid d-block d-md-none" alt="Wild Byte Logo Small">
+  <ul>
+    <li class="active">
+      <a href="/">Home</a>
+    </li>
+    <li>
+      <a href="/about.html">About</a>
+    </li>
+    <li>
+      <a href="/work.html">Work</a>
+      </li>
+    <li>
+      <a href="/contact.html">Contact</a></li>
+  </ul>
+  </div>
+</nav>
+
 <div class="content-container">
     <div class="content">
         <h1 class="mb-4 text-center">Take a look at what I've been working on!</h1>
