--- a/index.html
+++ b/index.html
@@ -104,6 +104,27 @@
     </div>
         </div>
       </div>
+      <footer>
+        <div class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex">
+          <div>
+          <h4>
+            Work Inquiry
+          </h4>
+          <p class="text-muted">Let's work together</p>
+          </div>
+          <div>
+          <a href="" class="btn-branding mt-3">Contact Me</a>
+          </div>
+        </div>
+        <div class="d-flex justify-content-center mb-5">
+        <a href="mailto:avictoriafrontend@gmail.com" class="email-link">avictoriafrontend@gmail.com</a>
+        </div>
+        <div class="social-links d-flex justify-content-center">
+        <a href="https://www.instagram.com/hanginwit_mydogs/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+        <a href="https://github.com/angelicav1" target="_blank"><i class="fa-brands fa-github"></i></a>
+        <a href="https://open.spotify.com/user/1247903115" target="_blank"><i class="fa-brands fa-spotify"></i></a>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
