Made the website SEO friendly and fixed the navigation

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta name="description" content="Angelica is an experienced front-end developer based in the United States; her skills include HTML, CSS, JavaScript, Bootstrap, AI, and Python">
+    <title>Front-end developer - Angelica Victoria/Wild Byte</title>
 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
@@ -43,16 +44,16 @@
   <img src="images/Original Logo.png" class="logo-small img-fluid d-block d-md-none" alt="Wild Byte Logo Small">
   <ul>
     <li class="active">
-      <a href="/">Home</a>
+      <a href="/" title="Homepage">Home</a>
     </li>
     <li>
-      <a href="/about.html">About</a>
+      <a href="/about.html" title="About Angelica">About</a>
     </li>
     <li>
-      <a href="/work.html">Work</a>
+      <a href="/work.html" title="About Angelica's work and experience">Work</a>
       </li>
     <li>
-      <a href="/contact.html">Contact</a></li>
+      <a href="/contact.html" title="Contact Angelica">Contact</a></li>
   </ul>
   </div>
 </nav>
@@ -60,10 +61,10 @@
     <div class="hero">
     <p>👋🏽 Hello, I am</p>
     <h1>Angelica Victoria</h1>
-    <h2 class="mb-3">🇲🇽Front-end developer based in the United States</h2>
+    <h2 class="mb-3">Front-end developer based in the United States</h2>
     <div>
-    <a href="about.html#contact" class="btn-branding">Contact me</a>
-    <a href="about.html" class="btn-branding">About Me</a>
+    <a href="contact.html" class="btn-branding" title="Contact me">Contact me</a>
+    <a href="about.html" class="btn-branding" title="About me">About Me</a>
     </div>
     </div>
     <p class="text-center m-5">Featured Projects</p>
@@ -75,8 +76,8 @@
         <div class="col">
           <div class="project-description">
     <h2 class="mb-5">World Clock Project</h2>
-    <p class="mb-5 text-muted">Far far away, behind mountains, farm fram from blach blah blah.Far far away, behind mountains, farm fram from blach blah blah.Far far away, behind mountains, farm fram from blach blah blah</p>
-    <a href="" class="btn-branding-outline">Learn more</a>
+    <p class="mb-5 text-muted">This project is a real time data world clock that provides you with location options such as North America and West Africa, as well as many others including your own current location. It was coded with HTML, CSS, JavaScript, and APIs.</p>
+    <a href="/work.html" class="btn-branding-outline">Learn more</a>
     </div>
         </div>
       </div>
@@ -84,8 +85,8 @@
         <div class="col">
           <div class="project-description">
     <h2 class="mb-5">AI Poetry Generator</h2>
-    <p class="mb-5 text-muted">Far far away, behind mountains, farm fram from blach blah blah.Far far away, behind mountains, farm fram from blach blah blah.Far far away, behind mountains, farm fram from blach blah blah</p>
-    <a href="" class="btn-branding-outline">Learn more</a>
+    <p class="mb-5 text-muted">This project is an AI Pablo Neruda poetry generator where any topic or theme such as "nature" or "love" will give you a poem inspired by the great poet. It was coded with HTML, CSS, and AI.</p>
+    <a href="/work.html" class="btn-branding-outline">Learn more</a>
     </div>
         </div>
          <div class="col d-none d-lg-block">
@@ -99,31 +100,34 @@
         <div class="col">
           <div class="project-description">
     <h2 class="mb-5">Iconic Celebrity Project</h2>
-    <p class="mb-5 text-muted">Far far away, behind mountains, farm fram from blach blah blah.Far far away, behind mountains, farm fram from blach blah blah.Far far away, behind mountains, farm fram from blach blah blah</p>
-    <a href="" class="btn-branding-outline">Learn more</a>
+    <p class="mb-5 text-muted">This project was simply inspired by great music and a SheCodes Challenge. It was coded with HTML, CSS, Bootstrap, and the music of Sade!</p>
+    <a href="/work.html" class="btn-branding-outline">Learn more</a>
     </div>
         </div>
       </div>
-      <footer>
+      <footer class="container">
         <div class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex">
           <div>
-          <h4>
+          <h3>
             Work Inquiry
-          </h4>
+          </h3>
           <p class="text-muted">Let's work together</p>
           </div>
           <div>
-          <a href="" class="btn-branding mt-3">Contact Me</a>
+          <a href="/contact.html" class="btn-branding mt-3" title="Contact Angelica">Contact Me</a>
           </div>
         </div>
         <div class="d-flex justify-content-center mb-5">
-        <a href="mailto:avictoriafrontend@gmail.com" class="email-link">avictoriafrontend@gmail.com</a>
+        <a href="mailto:avictoriafrontend@gmail.com" class="email-link" title="Email Angelica">avictoriafrontend@gmail.com</a>
         </div>
         <div class="social-links d-flex justify-content-center">
-        <a href="https://www.instagram.com/hanginwit_mydogs/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
-        <a href="https://github.com/angelicav1" target="_blank"><i class="fa-brands fa-github"></i></a>
-        <a href="https://open.spotify.com/user/1247903115" target="_blank"><i class="fa-brands fa-spotify"></i></a>
+        <a href="https://www.instagram.com/hanginwit_mydogs/" target="_blank" title="Instagram Profile"><i class="fa-brands fa-instagram"></i></a>
+        <a href="https://github.com/angelicav1" target="_blank" title="GitHub Profile"><i class="fa-brands fa-github"></i></a>
+        <a href="https://open.spotify.com/user/1247903115" target="_blank" title="Spotify Profile"><i class="fa-brands fa-spotify"></i></a>
         </div>
+        <p class="text-center mt-4">
+         ✌🏽 This project was coded by Angelica Victoria and is <a href="https://github.com/angelicav1/Portfolio-Project" target="_blank">open-sourced</a>
+        </p>
       </footer>
     </div>
   </body>
