--- a/work.html
+++ b/work.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Projects and related works for Angelica Victoria, front-end developer.">
+    <title>Work Page - Angelica Victoria/Wild Byte</title>
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -41,17 +42,17 @@
   <img src="images/Original Logo.png" class="logo d-none d-md-block" alt="Wild Byte Logo">
   <img src="images/Original Logo.png" class="logo-small img-fluid d-block d-md-none" alt="Wild Byte Logo Small">
   <ul>
+    <li>
+      <a href="/" title="Homepage">Home</a>
+    </li>
+    <li>
+      <a href="/about.html" title="About Angelica">About</a>
+    </li>
     <li class="active">
-      <a href="/">Home</a>
-    </li>
-    <li>
-      <a href="/about.html">About</a>
-    </li>
-    <li>
-      <a href="/work.html">Work</a>
+      <a href="/work.html" title="About Angelica's work and experience">Work</a>
       </li>
     <li>
-      <a href="/contact.html">Contact</a></li>
+      <a href="/contact.html" title="Contact Angelica">Contact</a></li>
   </ul>
   </div>
 </nav>
@@ -85,4 +86,28 @@
     </div>
 </div>
 </body>
+<footer class="container">
+        <div class="contact-box d-flex justify-content-between mb-5 d-none d-md-flex">
+          <div>
+          <h3>
+            Work Inquiry
+          </h3>
+          <p class="text-muted">Let's work together</p>
+          </div>
+          <div>
+          <a href="/contact.html" class="btn-branding mt-3" title="Contact Angelica">Contact Me</a>
+          </div>
+        </div>
+        <div class="d-flex justify-content-center mb-5">
+        <a href="mailto:avictoriafrontend@gmail.com" class="email-link" title="Email Angelica">avictoriafrontend@gmail.com</a>
+        </div>
+        <div class="social-links d-flex justify-content-center">
+        <a href="https://www.instagram.com/hanginwit_mydogs/" target="_blank" title="Instagram Profile"><i class="fa-brands fa-instagram"></i></a>
+        <a href="https://github.com/angelicav1" target="_blank" title="GitHub Profile"><i class="fa-brands fa-github"></i></a>
+        <a href="https://open.spotify.com/user/1247903115" target="_blank" title="Spotify Profile"><i class="fa-brands fa-spotify"></i></a>
+        </div>
+        <p class="text-center mt-4">
+         ✌🏽 This project was coded by Angelica Victoria and is <a href="https://github.com/angelicav1/Portfolio-Project" target="_blank">open-sourced</a>
+        </p>
+      </footer>
 </html>
