updated email, logo, and footer links

--- a/contact.html
+++ b/contact.html
@@ -39,14 +39,15 @@
   <body>
 <div class="container">
     <nav class="d-flex justify-content-between">
-  <img src="images/Original Logo.png" class="logo d-none d-md-block" alt="Wild Byte Logo">
-  <img src="images/Original Logo.png" class="logo-small img-fluid d-block d-md-none" alt="Wild Byte Logo Small">
+  <div class="logo">
+  <a href="https://avictoria.dev" target="_blank" alt="Angelica Victoria, Web Developer">Angelica Victoria</a>
+  </div>
   <ul>
     <li>
       <a href="/" title="Homepage">Home</a>
     </li>
     <li>
-      <a href="/about.html" title="About Angelica">About</a>
+      <a href="about.html" title="About Angelica">About</a>
     </li>
     <li>
       <a href="/work.html" title="About Angelica's work and experience">Work</a>
@@ -85,10 +86,10 @@
           </div>
         </div>
         <div class="d-flex justify-content-center mb-5">
-        <a href="mailto:avictoriafrontend@gmail.com" class="email-link" title="Email Angelica">avictoriafrontend@gmail.com</a>
+        <a href="mailto:angelica@avictoria.dev" class="email-link" title="Email Angelica">avictoriafrontend@gmail.com</a>
         </div>
         <div class="social-links d-flex justify-content-center">
-        <a href="https://www.instagram.com/hanginwit_mydogs/" target="_blank" title="Instagram Profile"><i class="fa-brands fa-instagram"></i></a>
+        <a href="https://www.instagram.com/wildbyteai/?igsh=MXJtN3g3d3NxbmthZw%3D%3D&utm_source=qr" target="_blank" title="Instagram Profile"><i class="fa-brands fa-instagram"></i></a>
         <a href="https://github.com/angelicav1" target="_blank" title="GitHub Profile"><i class="fa-brands fa-github"></i></a>
         <a href="https://open.spotify.com/user/1247903115" target="_blank" title="Spotify Profile"><i class="fa-brands fa-spotify"></i></a>
         </div>
