--- a/work.html
+++ b/work.html
@@ -39,8 +39,9 @@
   <body>
 <div class="container">
     <nav class="d-flex justify-content-between">
-  <img src="images/Original Logo.png" class="logo d-none d-md-block" alt="Wild Byte Logo">
-  <img src="images/Original Logo.png" class="logo-small img-fluid d-block d-md-none" alt="Wild Byte Logo Small">
+  <div class="logo">
+  <a href="https://avictoria.dev" target="_blank" alt="Angelica Victoria, Web Developer">Angelica Victoria</a>
+  </div>
   <ul>
     <li>
       <a href="/" title="Homepage">Home</a>
@@ -99,15 +100,14 @@
           </div>
         </div>
         <div class="d-flex justify-content-center mb-5">
-        <a href="mailto:avictoriafrontend@gmail.com" class="email-link" title="Email Angelica">avictoriafrontend@gmail.com</a>
+        <a href="mailto:angelica@avictoria.dev" class="email-link" title="Email Angelica">avictoriafrontend@gmail.com</a>
         </div>
         <div class="social-links d-flex justify-content-center">
-        <a href="https://www.instagram.com/hanginwit_mydogs/" target="_blank" title="Instagram Profile"><i class="fa-brands fa-instagram"></i></a>
+        <a href="https://www.instagram.com/wildbyteai/?igsh=MXJtN3g3d3NxbmthZw%3D%3D&utm_source=qr" target="_blank" title="Instagram Profile"><i class="fa-brands fa-instagram"></i></a>
         <a href="https://github.com/angelicav1" target="_blank" title="GitHub Profile"><i class="fa-brands fa-github"></i></a>
-        <a href="https://open.spotify.com/user/1247903115" target="_blank" title="Spotify Profile"><i class="fa-brands fa-spotify"></i></a>
         </div>
         <p class="text-center mt-4">
-         ✌🏽 This project was coded by Angelica Victoria and is <a href="https://github.com/angelicav1/Portfolio-Project" target="_blank">open-sourced</a>
+         ✌🏽 This project was coded by Angelica Victoria and is open-sourced on <a href="https://github.com/angelicav1/Portfolio-Project" target="_blank">GitHub</a>
         </p>
       </footer>
 </html>
