updated email and spotify links

--- a/work.html
+++ b/work.html
@@ -100,7 +100,7 @@
           </div>
         </div>
         <div class="d-flex justify-content-center mb-5">
-        <a href="mailto:angelica@avictoria.dev" class="email-link" title="Email Angelica">avictoriafrontend@gmail.com</a>
+        <a href="mailto:angelica@avictoria.dev" class="email-link" title="Email Angelica">angelica@avictoria.dev</a>
         </div>
         <div class="social-links d-flex justify-content-center">
         <a href="https://www.instagram.com/wildbyteai/?igsh=MXJtN3g3d3NxbmthZw%3D%3D&utm_source=qr" target="_blank" title="Instagram Profile"><i class="fa-brands fa-instagram"></i></a>
