--- a/contact.html
+++ b/contact.html
@@ -63,11 +63,11 @@
         <h1 class="mb-5">Let's get in touch!</h1>
         <h3>Email</h3>
         <p>
-           <a href="mailto:avictoriafrontend@gmail.com" target="_blank">avictoriafrontend@gmail.com</a>
+           <a href="mailto:angelica@avictoria.dev" target="_blank">angelica@avictoria.dev</a>
         </p>
         <h3>Instagram</h3>
         <p>
-            <a href="https://www.instagram.com/hanginwit_mydogs/" target="_blank">@hanginwit_mydogs</a></p>
+            <a href="https://www.instagram.com/wildbyteai/?igsh=MXJtN3g3d3NxbmthZw%3D%3D&utm_source=qr" target="_blank">@hanginwit_mydogs</a></p>
         <h3>GitHub</h3>
         <p>
             <a href="https://github.com/angelicav1" target="_blank">@angelicav1</a></p>
@@ -86,12 +86,11 @@
           </div>
         </div>
         <div class="d-flex justify-content-center mb-5">
-        <a href="mailto:angelica@avictoria.dev" class="email-link" title="Email Angelica">avictoriafrontend@gmail.com</a>
+        <a href="mailto:angelica@avictoria.dev" class="email-link" title="Email Angelica">angelica@avictoria.dev</a>
         </div>
         <div class="social-links d-flex justify-content-center">
         <a href="https://www.instagram.com/wildbyteai/?igsh=MXJtN3g3d3NxbmthZw%3D%3D&utm_source=qr" target="_blank" title="Instagram Profile"><i class="fa-brands fa-instagram"></i></a>
         <a href="https://github.com/angelicav1" target="_blank" title="GitHub Profile"><i class="fa-brands fa-github"></i></a>
-        <a href="https://open.spotify.com/user/1247903115" target="_blank" title="Spotify Profile"><i class="fa-brands fa-spotify"></i></a>
         </div>
         <p class="text-center mt-4">
          ✌🏽 This project was coded by Angelica Victoria and is <a href="https://github.com/angelicav1/Portfolio-Project" target="_blank">open-sourced</a>
