Updated images and contact page

--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
     <div class="container">
       <div class="row mb-5">
         <div class="col d-none d-lg-block">
-          <img src="images/World Clock project.png" class="img-fluid" alt="World Clock Project" />
+          <img src="images/travelproject.png" class="img-fluid" alt="Travel Destination Project" />
         </div>
         <div class="col">
           <div class="project-description">
-    <h2 class="mb-5">World Clock Project</h2>
-    <p class="mb-5 text-muted">This project is a real time data world clock that provides you with location options such as North America and West Africa, as well as many others including your own current location. It was coded with HTML, CSS, JavaScript, and APIs.</p>
+    <h2 class="mb-5">Travel Destination Project</h2>
+    <p class="mb-5 text-muted">I built a multi-page responsive project with Bootstrap (Navigation, Utility Classes, etc.), Flexbox, Multiple Page Hosting, Media Queries and more in SheCodes Responsive, a 7-week advanced workshop.</p>
     <a href="/work.html" class="btn-branding-outline">Learn more</a>
     </div>
         </div>
@@ -96,12 +96,12 @@
       </div>
        <div class="row mb-5">
         <div class="col d-none d-lg-block">
-          <img src="images/Sade project.png" class="img-fluid" alt="Iconic Celebrity Project" />
+          <img src="images/weatherapp.png" class="img-fluid" alt="Weather App Project" />
         </div>
         <div class="col">
           <div class="project-description">
-    <h2 class="mb-5">Iconic Celebrity Project</h2>
-    <p class="mb-5 text-muted">This project was simply inspired by great music and a SheCodes Challenge. It was coded with HTML, CSS, Bootstrap, and the music of Sade!</p>
+    <h2 class="mb-5">Weather App Project</h2>
+    <p class="mb-5 text-muted">Developed and deployed a fully functioning weather application in React. This project utilizes APIs to provide real-time weather data. </p>
     <a href="/work.html" class="btn-branding-outline">Learn more</a>
     </div>
         </div>
