--- a/work.html
+++ b/work.html
@@ -64,25 +64,53 @@
 
         <div class="row">
             <div class="col-md-6 mb-4">
-                <img src="images/World Clock project.png" class="img-fluid mb-3 rounded" alt="World Clock Project"/>
-                <h3 class="text-center">World Clock Project</h3>
-                <p class="text-center text-muted">Built with HTML, CSS, and JavaScript</p>
+                <img src="images/travelproject.png" class="img-fluid mb-3 rounded" alt="Travel Destination Project"/>
+                <h3 class="text-center">Travel Destination Project</h3>
+                <p class="text-center text-muted">Built with HTML, CSS, JavaScript, and Bootstrap</p>
+                <div class="text-center mt-4 mb-5">
+                  <a 
+                  href="https://whimsical-cupcake-665c6f.netlify.app/"
+                  class="btn-branding"
+                  target="_blank"
+                  >Launch Project</a>
+                </div>
             </div>
             <div class="col-md-6 mb-4">
                 <img src="images/Pablo Neruda project.png" class="img-fluid mb-3 rounded" alt="AI Poem Generator"/>
                 <h3 class="text-center">AI Poem Generator</h3>
                 <p class="text-center text-muted">Built with HTML, CSS, and AI</p>
+                <div class="text-center mt-4 mb-5">
+                  <a 
+                  href="https://pablonerudapoetrygenerator.netlify.app/"
+                  class="btn-branding"
+                  target="_blank"
+                  >Launch Project</a>
+                </div>
             </div>
             <div class="col-md-6 mb-4">
-                <img src="images/Weather Forecast.png" class="img-fluid mb-3 rounded" alt="Weather Forecast Project"/>
+                <img src="images/weatherapp.png" class="img-fluid mb-3 rounded" alt="Weather Forecast Project"/>
                 <h3 class="text-center">Weather Forecast Project</h3>
-                <p class="text-center text-muted">Built with HTML, CSS, API, and JavaScript</p>
+                <p class="text-center text-muted">Built with HTML, CSS, API, JavaScript, and React</p>
+                <div class="text-center mt-4 mb-5">
+                  <a 
+                  href="https://verdant-kitten-69f1f2.netlify.app/"
+                  class="btn-branding"
+                  target="_blank"
+                  >Launch Project</a>
+                </div>
             </div>
             <div class="col-md-6 mb-4">
-                <img src="images/Sade project.png" class="img-fluid mb-3 rounded" alt="Iconic Celebrity Project"/>
-                <h3 class="text-center">Iconic Celebrity Project</h3>
-                <p class="text-center text-muted">Built with HTML, CSS, and Bootstrap</p>
-            </div>
+                <img src="images/dictionaryapp.png" class="img-fluid mb-3 rounded" alt="Dictionary APP Project"/>
+                <h3 class="text-center">Dictionary Project</h3>
+                <p class="text-center text-muted">Built with HTML, advanced CSS, multiple APIs, React, and Bootstrap</p>
+              <div class="text-center mt-4 mb-5">
+                <a 
+                href="https://cheery-sprinkles-9d1168.netlify.app/"
+                class="btn-branding"
+                target="_blank"
+                >Launch Project</a>
+              </div>
+              </div>
         </div>
     </div>
 </div>
