--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Contact page for Angelica Victoria, front-end developer.">
-    <title>Contact Page - Angelica Victoria/Wild Byte</title>
+    <title>Contact Page - Angelica Victoria</title>
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -61,13 +61,45 @@
    <div class="content-container">
     <div class="content">
         <h1 class="mb-5">Let's get in touch!</h1>
+        <div class="row">
+          <div class="col-md-8">
+            <form 
+            action="https://formspree.io/f/mrbzqkgk"
+            method="POST"
+            class="border p-3 rounded mb-3"
+            >
+            <div class="mb-3">
+              <label class="form-label"> Your email:</label>
+              <input
+              type="email"
+              name="_replyto"
+              class="form-control"
+              required
+              autofocus
+              />
+            </div>
+            <div class="mb-3">
+              <label class="form-label"> Your message: </label>
+              <textarea
+              name="message"
+              class="form-control"
+              required
+              ></textarea>
+            </div>
+
+            <!-- your other form fields go here-->
+
+            <button type="submit" class="btn-branding">Send</button>
+          </form>
+          </div>
+          <div class="col-md-4">
         <h3>Email</h3>
         <p>
            <a href="mailto:angelica@avictoria.dev" target="_blank">angelica@avictoria.dev</a>
         </p>
         <h3>Instagram</h3>
         <p>
-            <a href="https://www.instagram.com/wildbyteai/?igsh=MXJtN3g3d3NxbmthZw%3D%3D&utm_source=qr" target="_blank">@hanginwit_mydogs</a></p>
+            <a href="https://www.instagram.com/wildbyteai/?igsh=MXJtN3g3d3NxbmthZw%3D%3D&utm_source=qr" target="_blank">@wildbyteai</a></p>
         <h3>GitHub</h3>
         <p>
             <a href="https://github.com/angelicav1" target="_blank">@angelicav1</a></p>
