updated about, contact, and index files. Updated project css and added an image.

--- a/about.html
+++ b/about.html
@@ -63,15 +63,16 @@
         <div class="col-lg-6">
           <div class="content">
     <h1 class="mb-4">Hi, I am Angelica Victoria</h1>
-    <h2 class="mb-4">Front-end developer from Rancho Cucamonga, United States</h2>
+    <h2 class="mb-4">Front-End Developer from Rancho Cucamonga, United States</h2>
       <p class="mb-4">
-        I am a Front-end Developer with experience working with JavaScript, HTML, CSS, Bootstrap, AI, and Python to deliver exceptional customer experiences. Adept at contributing to a highly collaborative work environment, finding solutions, and determining customer satisfaction.
+        I have experience working with JavaScript, HTML, CSS, Bootstrap, AI, and Python to deliver exceptional customer experiences. Adept at contributing to a highly collaborative work environment, finding solutions, and determining customer satisfaction. 
+        In building JavaScript applications, I'm equipped with just the right tools, and can absolutely function independently of them to deliver fast, resilient solutions optimized for scale; performance and scalabilty are priorities on my radar.
       </p>
       <a href="/work.html" class="btn-branding" title="Project previews">See my projects</a>
       </div>
       </div>
       <div class="col-lg-6">
-      <img src="images/Angelica Victoria.png" alt="Angelica image" class="img-fluid"/>
+      <img src="images/avictoria 2.png" alt="Angelica image" class="img-fluid"/>
       </div>
     </div>
     </div>
@@ -91,9 +92,8 @@
         <a href="mailto:angelica@avictoria.dev" class="email-link" title="Email Angelica">angelica@avictoria.dev</a>
         </div>
         <div class="social-links d-flex justify-content-center">
-        <a href="https://www.instagram.com/wildbyteai/?igsh=MXJtN3g3d3NxbmthZw%3D%3D&utm_source=qr" target="_blank" title="Instagram Profile"><i class="fa-brands fa-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/angelica-victoria-96533140/" target="_blank" title="Linkedin Profile"><i class="fa-brands fa-linkedin"></i></a>
         <a href="https://github.com/angelicav1" target="_blank" title="GitHub Profile"><i class="fa-brands fa-github"></i></a>
-        <a href="https://open.spotify.com/user/1247903115" target="_blank" title="Spotify Profile"><i class="fa-brands fa-spotify"></i></a>
         </div>
         <p class="text-center mt-4">
          ✌🏽 This project was coded by Angelica Victoria and is open-sourced on <a href="https://github.com/angelicav1/Portfolio-Project" target="_blank">GitHub</a>
