--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Angelica is an experienced front-end developer based in the United States; her skills include HTML, CSS, JavaScript, Bootstrap, AI, and Python">
-    <title>Front-end developer - Angelica Victoria/Wild Byte</title>
+    <title>Front-end developer - Angelica Victoria/avictoria.dev</title>
 
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
@@ -62,7 +62,9 @@
     <div class="hero">
     <p>👋🏽 Hello, I am</p>
     <h1>Angelica Victoria</h1>
-    <h2 class="mb-3">Front-end developer based in the United States</h2>
+    <h2 class="mb-3">Front-End Developer based in Rancho Cucamonga, CA. 
+      <br>-I love sushi 🍣-
+    </h2>
     <div>
     <a href="contact.html" class="btn-branding" title="Contact me">Contact me</a>
     <a href="about.html" class="btn-branding" title="About me">About Me</a>
@@ -122,7 +124,7 @@
         <a href="mailto:angelica@avictoria.dev" class="email-link" title="Email Angelica">angelica@avictoria.dev</a>
         </div>
         <div class="social-links d-flex justify-content-center">
-        <a href="https://www.instagram.com/wildbyteai/?igsh=MXJtN3g3d3NxbmthZw%3D%3D&utm_source=qr" target="_blank" title="Instagram Profile"><i class="fa-brands fa-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/angelica-victoria-96533140/" target="_blank" title="Linkedin Profile"><i class="fa-brands fa-linkedin"></i></a>
         <a href="https://github.com/angelicav1" target="_blank" title="GitHub Profile"><i class="fa-brands fa-github"></i></a>
         </div>
         <p class="text-center mt-4">
