--- a/contact.html
+++ b/contact.html
@@ -97,9 +97,9 @@
         <p>
            <a href="mailto:angelica@avictoria.dev" target="_blank">angelica@avictoria.dev</a>
         </p>
-        <h3>Instagram</h3>
+        <h3>LinkedIn</h3>
         <p>
-            <a href="https://www.instagram.com/wildbyteai/?igsh=MXJtN3g3d3NxbmthZw%3D%3D&utm_source=qr" target="_blank">@wildbyteai</a></p>
+            <a href="https://www.linkedin.com/in/angelica-victoria-96533140/" target="_blank">@angelica-victoria-96533140</a></p>
         <h3>GitHub</h3>
         <p>
             <a href="https://github.com/angelicav1" target="_blank">@angelicav1</a></p>
@@ -121,11 +121,11 @@
         <a href="mailto:angelica@avictoria.dev" class="email-link" title="Email Angelica">angelica@avictoria.dev</a>
         </div>
         <div class="social-links d-flex justify-content-center">
-        <a href="https://www.instagram.com/wildbyteai/?igsh=MXJtN3g3d3NxbmthZw%3D%3D&utm_source=qr" target="_blank" title="Instagram Profile"><i class="fa-brands fa-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/angelica-victoria-96533140/" target="_blank" title="Linkedin Profile"><i class="fa-brands fa-linkedin"></i></a>
         <a href="https://github.com/angelicav1" target="_blank" title="GitHub Profile"><i class="fa-brands fa-github"></i></a>
         </div>
         <p class="text-center mt-4">
-         ✌🏽 This project was coded by Angelica Victoria and is <a href="https://github.com/angelicav1/Portfolio-Project" target="_blank">open-sourced</a>
+         ✌🏽 This project was coded by Angelica Victoria and is open-sourced <a href="https://github.com/angelicav1/Portfolio-Project" target="_blank">GitHub</a>
         </p>
       </footer>
   </body>
