--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
     <h1 class="mb-4">Hi, I am Angelica Victoria</h1>
     <h2 class="mb-4">Front-End Developer from Rancho Cucamonga, United States</h2>
       <p class="mb-4">
-        I have experience working with JavaScript, HTML, CSS, Bootstrap, AI, and Python to deliver exceptional customer experiences. Adept at contributing to a highly collaborative work environment, finding solutions, and determining customer satisfaction. 
+        I have experience working with JavaScript, HTML, CSS, Bootstrap, AI, React, and Python to deliver exceptional customer experiences. Adept at contributing to a highly collaborative work environment, finding solutions, and determining customer satisfaction. 
         In building JavaScript applications, I'm equipped with just the right tools, and can absolutely function independently of them to deliver fast, resilient solutions optimized for scale; performance and scalabilty are priorities on my radar.
       </p>
       <a href="/work.html" class="btn-branding" title="Project previews">See my projects</a>
