updated LinkedIn link

--- a/contact.html
+++ b/contact.html
@@ -99,7 +99,7 @@
         </p>
         <h3>LinkedIn</h3>
         <p>
-            <a href="https://www.linkedin.com/in/angelica-victoria-96533140/" target="_blank">@angelica-victoria-96533140</a></p>
+            <a href="https://www.linkedin.com/in/angelicavictoria1/" target="_blank">@angelicavictoria1</a></p>
         <h3>GitHub</h3>
         <p>
             <a href="https://github.com/angelicav1" target="_blank">@angelicav1</a></p>
@@ -121,7 +121,7 @@
         <a href="mailto:angelica@avictoria.dev" class="email-link" title="Email Angelica">angelica@avictoria.dev</a>
         </div>
         <div class="social-links d-flex justify-content-center">
-        <a href="https://www.linkedin.com/in/angelica-victoria-96533140/" target="_blank" title="Linkedin Profile"><i class="fa-brands fa-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/angelicavictoria1/" target="_blank" title="Linkedin Profile"><i class="fa-brands fa-linkedin"></i></a>
         <a href="https://github.com/angelicav1" target="_blank" title="GitHub Profile"><i class="fa-brands fa-github"></i></a>
         </div>
         <p class="text-center mt-4">
