Updated about.html and added professional resume pdf

--- a/about.html
+++ b/about.html
@@ -74,6 +74,10 @@
       <div class="col-lg-6">
       <img src="images/avictoria 2.png" alt="Angelica image" class="img-fluid"/>
     </div>
+    <p class="text-center">
+      <img src="images/resume.png" alt="Angelica Resume" class="img-thumbnail rounded mx-auto d-block"/>
+<a href="images/Professional Modern CV Resume.pdf" target="_blank" class="badge text-bg-secondary text-wrap">Resume PDF</a>
+    </p>
     </div>
     </div>
     <footer class="container">
