corrected typo in contact.html

--- a/contact.html
+++ b/contact.html
@@ -125,7 +125,7 @@
         <a href="https://github.com/angelicav1" target="_blank" title="GitHub Profile"><i class="fa-brands fa-github"></i></a>
         </div>
         <p class="text-center mt-4">
-         ✌🏽 This project was coded by Angelica Victoria and is open-sourced <a href="https://github.com/angelicav1/Portfolio-Project" target="_blank">GitHub</a>
+         ✌🏽 This project was coded by Angelica Victoria and is open-sourced on <a href="https://github.com/angelicav1/Portfolio-Project" target="_blank">GitHub</a>
         </p>
       </footer>
   </body>
