--- a/work.html
+++ b/work.html
@@ -8,7 +8,7 @@
     <title>Work Page - Angelica Victoria/Wild Byte</title>
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet noopener">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
 
@@ -135,7 +135,7 @@
         <a href="https://github.com/angelicav1" target="_blank" title="GitHub Profile"><i class="fa-brands fa-github"></i></a>
         </div>
         <p class="text-center mt-4">
-         ✌🏽 This project was coded by Angelica Victoria and is open-sourced on <a href="https://github.com/angelicav1/Portfolio-Project" target="_blank">GitHub</a>
+          ✌🏽 This project was coded by Angelica Victoria and is open-sourced on <a href="https://github.com/angelicav1/Portfolio-Project" target="_blank">GitHub</a>
         </p>
       </footer>
 </html>
